--- a/MonaspatyF/Views/HallShopOwner/AddHS.cshtml
+++ b/MonaspatyF/Views/HallShopOwner/AddHS.cshtml
@@ -64,7 +64,7 @@
 
             <div class="form-group">
                 <label asp-for="photo" class="control-label">Imag</label>
-                <input type="file" asp-for="photo" class="form-control" accept="image/*" required="" />
+                <input asp-for="photo" class="form-control" accept="image/*" required="" />
                 <span asp-validation-for="photo" class="text-danger"></span>
             </div>
 
