--- a/MonaspatyF/Views/HallShopOwner/Profile.cshtml
+++ b/MonaspatyF/Views/HallShopOwner/Profile.cshtml
@@ -44,7 +44,7 @@
             <p class="card-text">
                 You Can Add Details of Hall OR Shop
             </p>
-            <button type="button" class="btn btn-secondary" onclick="createHOS(@ViewBag.HallShopOwner.Id)">Add</button>
+            <button type="button" class="btn btn-secondary" onclick="createHOS(@ViewBag.HallShopOwner.Id)" data-backdrop="static">Add</button>
         </div>
     </div>
 </div>
