--- a/MonaspatyF/Views/HallShops/Index.cshtml
+++ b/MonaspatyF/Views/HallShops/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div class="modal fade" id="details">
+<div class="modal fade" id="details" style="margin-top:190px">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
